# c_compiler

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt  main.c  main.cpp
src/asm/: CMakeLists.txt  asm_emitter.cpp  asm_emitter.hpp  binary.hpp  bit_width.hpp  cdq.hpp  cmp.hpp  function.hpp  instruction.hpp  jump.hpp  mov.hpp  operand.hpp  pop.hpp  ret.hpp  set.hpp  start_function.hpp  unary.hpp
src/ast/: CMakeLists.txt  ast.hpp
src/ir/: CMakeLists.txt  binary.hpp  copy.hpp  defs.hpp  function.hpp  ir.cpp  ir.hpp  ir_generator.cpp  ir_generator.hpp  jump.hpp  jump_if_not_zero.hpp  jump_if_zero.hpp  label.hpp  return.hpp  unary.hpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp  token.hpp
src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/pipeline/: CMakeLists.txt  pipeline.cpp  pipeline.hpp
src/utils/: CMakeLists.txt  file.cpp  file.hpp
test/: CMakeLists.txt
test/asm/: CMakeLists.txt  test_asm.cpp
test/ir/: CMakeLists.txt  test_ir.cpp
test/lexer/: CMakeLists.txt  test_lexer.cpp
test/parser/: CMakeLists.txt  test_parser.cpp
